fix: 修复menus bug 和移动swagger 分组
